--- a/icecast.service
+++ b/icecast.service
@@ -3,9 +3,7 @@ Description=Icecast Network Audio Streaming Server
 After=network.target
 
 [Service]
-Type=forking
-PIDFile=/run/icecast/icecast.pid
-ExecStart=/usr/bin/icecast -b -c /etc/icecast.xml
+ExecStart=/usr/bin/icecast -c /etc/icecast.xml
 
 [Install]
 WantedBy=multi-user.target
